# py-transmit

./: .gitignore  README.md  main.py  pyproject.toml
demo/: client.py  client_demo.py  readme.md  server.py  server_demo.py  socket_client.py  test.py
src/: health_check.py  server.py
src/trans/: Transmit.py
src/transmit/: client.py  health_check.py  server.py
src/transmit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
transmit/: client.py  log.py  server.py  tool.py  util.py
transmit/trans/: Transmit-remote  Transmit.py
