[tool.poetry]
name = "transmit"
version = "0.1.0"
description = "Transmit Server & Client use thrift"
authors = ["hbh112233abc <hbh112233abc@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
thrift = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
