[project]
name = "transmit"
version = "0.4.4"
description = "Transmit Server & Client use thrift"
readme = "README.md"
authors = [
    { name = "hbh112233abc", email = "hbh112233abc@163.com" }
]
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.5.3",
    "thrift>=0.22.0",
]
[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
